download-item overflow fix

--- a/src/components/MediaInfo.css
+++ b/src/components/MediaInfo.css
@@ -963,6 +963,23 @@
     > .secondary
     > .more-container
     > .more-dropdown
+    > .more-dropdown-item.download-item
+    > .sub-dropdown
+    > .dropdown-content
+    > .dropdown-item {
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.media-page
+    > .media-info
+    > .media-actions
+    > .actions
+    > .secondary
+    > .more-container
+    > .more-dropdown
     > .more-dropdown-item
     > .sub-dropdown
     > .dropdown-content
